--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,11 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
+
+
+    // JSR-310
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
