--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".webview.WebViewActivity"/>
 
         <service android:name=".fcm.MyFirebaseMessagingService">
             <intent-filter>
